# rusty-cogs

./: Cargo.toml  index.html  readme.md
src/: camera.rs  camera_controller.rs  camera_uniform.rs  lib.rs  main.rs  shader.wgsl  texture.rs  vertex.rs
